--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "sheetjs-style": "^0.15.8",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.1",
+    "tus-js-client": "^3.0.1",
+    "use-tus": "^0.7.1",
     "xlsx": "^0.18.5",
     "yup": "0.32.9"
   },
