--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fullcalendar/react": "5.10.1",
     "@fullcalendar/timegrid": "5.10.1",
     "@hookform/resolvers": "2.4.0",
+    "@mapbox/mapbox-gl-language": "^1.0.1",
     "@mui/lab": "5.0.0-alpha.80",
     "@mui/material": "5.6.4",
     "@mui/x-data-grid": "5.10.0",
@@ -57,6 +58,8 @@
     "jalali-moment": "^3.3.11",
     "jsonwebtoken": "8.5.1",
     "keen-slider": "6.6.5",
+    "mapbox-gl": "^2.12.1",
+    "mapir-react-component": "^2.0.7",
     "mdi-material-ui": "7.1.0",
     "next": "12.1.6",
     "nprogress": "0.2.0",
@@ -77,8 +80,10 @@
     "react-hook-form": "7.3.0",
     "react-hot-toast": "2.1.1",
     "react-i18next": "11.14.3",
+    "react-map-gl": "^7.0.21",
     "react-moment": "^1.1.2",
     "react-neshan-map-leaflet": "^1.2.1",
+    "react-neshan-map-openlayers": "^1.0.3",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.2.5",
     "react-redux": "8.0.1",
