--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fullcalendar/timegrid": "5.10.1",
     "@hookform/resolvers": "2.4.0",
     "@mapbox/mapbox-gl-language": "^1.0.1",
+    "@mapbox/search-js-react": "^1.0.0-beta.15",
     "@mui/lab": "5.0.0-alpha.80",
     "@mui/material": "5.6.4",
     "@mui/x-data-grid": "5.10.0",
